# lime

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
inc/lime/: cell.h  column.h  database.h  execution.h  placeholder.h  record.h  row.h  table.h  traits.h
inc/lime/execution/: all.h  context.h  each_row.h  function_caller.h  once.h  traits.h  types.h  utility.h
lazy/: vs2019_win_x64.cmd
src/: database.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: insert.cpp  main.cpp
